pkg/front_end/testcases/no_such_method_forwarders/default_argument_values.dart.weak.outline.expect
library;
import self as self;
import "dart:core" as core;

abstract class A extends core::Object {
  synthetic constructor •() → self::A
    ;
  method noSuchMethod(core::Invocation i) → dynamic
    ;
  abstract method foo({core::String bar = "baz"}) → core::String;
  abstract method hest([core::int fisk = 42]) → core::int;
}
class B extends self::A {
  synthetic constructor •() → self::B
    ;
  no-such-method-forwarder method foo({has-declared-initializer core::String bar}) → core::String
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#foo, 0, const <core::Type*>[], const <dynamic>[], core::Map::unmodifiable<core::Symbol*, dynamic>(<core::Symbol*, dynamic>{#bar: bar}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::String;
  no-such-method-forwarder method hest([has-declared-initializer core::int fisk]) → core::int
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#hest, 0, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[fisk]), core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::int;
}
static method main() → dynamic
  ;


Extra constant evaluation status:
Evaluated: SymbolLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> SymbolConstant(#foo)
Evaluated: ListLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> ListConstant(const <Type*>[])
Evaluated: ListLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> ListConstant(const <dynamic>[])
Evaluated: SymbolLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> SymbolConstant(#bar)
Evaluated: SymbolLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> SymbolConstant(#hest)
Evaluated: ListLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> ListConstant(const <Type*>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///default_argument_values.dart:25:7 -> MapConstant(const <Symbol*, dynamic>{})
Extra constant evaluation: evaluated: 22, effectively constant: 7
